--- a/mxshop-auth/pom.xml
+++ b/mxshop-auth/pom.xml
@@ -40,6 +40,11 @@
         <!-- 本项目依赖end -->
 
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-config</artifactId>
         </dependency>
