--- a/mxshop-config/src/main/resources/shared/mxshop-auth-dev.yml
+++ b/mxshop-config/src/main/resources/shared/mxshop-auth-dev.yml
@@ -1,8 +1,13 @@
 #数据源
-spring.datasource.url: jdbc:mysql://192.168.99.100:3306/test?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.datasource.url: jdbc:mysql://mysql:3306/test?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 spring.datasource.username: root
 spring.datasource.password: root
 spring.datasource.driver-class-name: com.mysql.jdbc.Driver
+
+#redis
+spring.redis.host: redis
+spring.redis.port: 6379
+spring.redis.password:
 
 server:
   context-path: /uaa
