--- a/mxshop-config/src/main/resources/shared/mxshop-auth.yml
+++ b/mxshop-config/src/main/resources/shared/mxshop-auth.yml
@@ -4,6 +4,11 @@ spring.datasource.username: root
 spring.datasource.password: root
 spring.datasource.driver-class-name: com.mysql.jdbc.Driver
 
+#redis
+spring.redis.host: redis
+spring.redis.port: 6379
+spring.redis.password:
+
 server:
   context-path: /uaa
   port: 5000
