--- a/mxshop-config/src/main/resources/shared/product-service.yml
+++ b/mxshop-config/src/main/resources/shared/product-service.yml
@@ -1,5 +1,5 @@
 #数据源
-spring.datasource.url: jdbc:mysql://192.168.1.250:3306/test?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.datasource.url: jdbc:mysql://localhost:3306/test?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC&autoReconnect=true
 spring.datasource.username: root
 spring.datasource.password: root
 spring.datasource.driver-class-name: com.mysql.jdbc.Driver
@@ -7,7 +7,7 @@ spring.datasource.driver-class-name: com.mysql.jdbc.Driver
 #redis
 spring.redis.host: localhost
 spring.redis.port: 6379
-spring.redis.password: 5i841qaz
+spring.redis.password:
 
 server:
   context-path: /product
