--- a/user-service/pom.xml
+++ b/user-service/pom.xml
@@ -20,6 +20,11 @@
 
     <dependencies>
         <!-- 本项目依赖start -->
+        <dependency>
+            <groupId>cn.com.ydream</groupId>
+            <artifactId>mxshop-common</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
         <!-- 本项目依赖end -->
 
         <dependency>
@@ -40,11 +45,11 @@
         </dependency>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-openfeign</artifactId>
+            <artifactId>spring-cloud-starter-feign</artifactId>
         </dependency>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+            <artifactId>spring-cloud-starter-eureka</artifactId>
         </dependency>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
